fix:Aligning the price and increasing image size

--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -14,6 +14,7 @@ footer {
 }
 
 .places article {
+	clear: both;
 	display: inline-block;
 	width: 390px;
 	padding: 20px;
@@ -25,4 +26,3 @@ footer {
 .places article h2 {
 	font-size: 30px;
 }
-
