--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,47 +1,59 @@
 @import url("7-places.css");
 
 .price_by_night {
-	vertical-align: top;
-	float: right;
+	clear: both;
+	margin-top: -90px;
 	color: #FF5A5F;
 	border: solid #FF5A5F 4px;
 	border-radius: 50px;
 	min-width: 60px;
 	height: 60px;
+	line-height: 60px;
 	font-size: 30px;
 	float: right;
-	/* align: the top right (with space) */
 }
 
 .information {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
 	text-align: center;
 	height: 80px;
 	border-top: solid #DDDDDD 1px;
 	border-bottom: solid #DDDDDD 1px;
+	margin: auto;
+	margin-bottom: 10px;
+}
+
+.max_guest,
+.number_rooms,
+.number_bathrooms {
+	display: flex;
+	flex-direction: column;
+	width: 100px;
+	background-repeat: no-repeat;
+	background-size: 50px 50px;
+	line-height: 60px;
+	display: inline;
 }
 
 .max_guest {
-	width: 100px;
 	background-image: url("../images/icon_group.png");
-	background-repeat: no-repeat;
 }
 
 .number_rooms {
-	width: 100px;
 	background-image: url("../images/icon_bed.png");
-	background-repeat: no-repeat;
 }
 
 .number_bathrooms {
-	width: 100px;
 	background-image: url("../images/icon_bath.png");
-	background-repeat: no-repeat;
 }
 
-/* .user {
-
+.user {
+	text-align: justify;
+	margin-bottom: 10px;
 }
 
 .description {
-
-} */
+	text-align: justify;
+}
